# governmentreporter

./: .copilot-instructions.md  .env.example  .gitignore  .pre-commit-config.yaml  CHUNKING_FIX_SUMMARY.md  CLAUDE.md  COMPREHENSIVE_FILE_UPDATES.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_DOCUMENTATION.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  MCP_SERVER_STATUS.md  MCP_SERVER_STRUCTURE.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  SCOTUS_PIPELINE_GUIDE.md  SCRIPT_UPDATES.md  TEST_UPDATES_SUMMARY.md  TROUBLESHOOTING.md  docker-compose.yml  logging.yaml  logging_config.yaml  main.py  process_scotus_opinion.py  project_overview.md  pyproject.toml  test_courtlistener_connection.py  test_logging.py  test_simple_fetch.py  test_verbose_logging.py
.claude/: settings.local.json
.github/workflows/: ci.yml
custom_qdrant/: meta.json
docs/: conf.py  index.rst
example_output/: apis_base_output.json  apis_court_listener_output.json  apis_federal_register_output.json  database_qdrant_client_output.json  processors_build_payloads_output.json  processors_chunking_output.json  processors_llm_extraction_output.json  processors_schema_output.json  run_all_examples.py  utils_citations_output.json  utils_config_output.json
example_output/apis/: base.py  court_listener.py  federal_register.py
example_output/database/: qdrant_client.py
example_output/processors/: build_payloads.py  chunking.py  llm_extraction.py  schema.py
example_output/utils/: citations.py  config.py
examples/: config_usage.py
raw-data/executive_orders_data/: processing_progress.json
raw-data/scotus_data/: error_log.jsonl  processing_progress.json
scratch/: case_law_api.html  check_quadrant.py  ci_logs.sh  cluster_endpoint.json  courtlistener_caselaw_api.md  courtlistener_clusters_endpoint.json  courtlistener_opinion_endpoint.json  courtlistener_opinion_html_text.json  courtlistener_opinion_plain_text.json  executive_order_metadata.json  executive_order_text.txt  fetch_executive_orders.py  opinions_endpoint.json  program_structure.md  pull_opinion_cluster.sh  pull_opinion_text.sh  test-run.md  test-run.sh  verify_payload_structure.py
scratch/docstring_examples/: run_court_listener_examples.py  run_federal_register_examples.py
scratch/gpt5-api-docs/: conversation-state.md  evals.md  gpt-5.md  prompt-caching.md  prompt-engineering.md  prompt-overiew.md  reasoning.md  structured-output.md  text-generation.md
scripts/: download_scotus_bulk.py  process_executive_orders.py  process_scotus_opinion.py  test_opinion_chunking.py  test_pipeline.py  test_updated_process.py
scripts/ingestion/: __init__.py  ingest_executive_orders.py  ingest_scotus.py  progress_tracker.py
src/governmentreporter/: __init__.py  server.py
tests/: __init__.py  conftest.py  test_chunking.py  test_conftest.py  test_scotus_pipeline.py  test_simple_fetch.py
tests/apis/: test_court_listener.py  test_federal_register.py
tests/test_apis/: test_base.py  test_court_listener.py  test_federal_register.py
tests/test_cli/: __init__.py  test_ingest_command.py  test_main.py  test_server_command.py
tests/test_database/: test_ingestion.py  test_qdrant.py
tests/test_ingestion/: __init__.py  test_base_ingester.py  test_scotus.py
(+68 files in other folders)
