[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "governmentreporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "qdrant-client>=1.7.0",
    "feedparser>=6.0.11",
    "openai>=1.0.0",
    "httpx>=0.28.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "tiktoken>=0.11.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "types-pyyaml>=6.0.12.20250809",
]

[tool.setuptools]
packages = ["governmentreporter"]
package-dir = {"" = "src"}
