[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "governmentreporter"
version = "0.1.0"
description = "MCP server and Python library for semantic search of US government documents (Supreme Court opinions, Executive Orders) using hierarchical chunking and RAG"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mcp", "model-context-protocol", "supreme-court", "executive-orders", "government", "legal", "rag", "semantic-search", "vector-database", "qdrant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "beautifulsoup4>=4.13.4",
    "click>=8.0.0",
    "qdrant-client>=1.7.0",
    "feedparser>=6.0.11",
    "openai>=1.0.0",
    "httpx>=0.28.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "tiktoken>=0.11.0",
    "mcp>=1.0.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "respx>=0.22.0",
    "types-pyyaml>=6.0.12.20250809",
]

[project.scripts]
governmentreporter = "governmentreporter.cli.main:main"

[tool.setuptools]
packages = ["governmentreporter", "governmentreporter.apis", "governmentreporter.cli", "governmentreporter.database", "governmentreporter.ingestion", "governmentreporter.processors", "governmentreporter.processors.chunking", "governmentreporter.utils", "governmentreporter.server"]
package-dir = {"" = "src"}
